CSS fix for hamburger visibility in responsive mobile mode

--- a/css/theme.css
+++ b/css/theme.css
@@ -243,3 +243,10 @@ a, a.hover {
 blockquote {
  	font-size: 1em;
 }
+.navbar-inverse .navbar-toggle {
+    border-color: #147890;
+}
+
+.navbar-toggle {
+	background-color: #147890;
+}
